fixes #190 -- letter-spacing on body copy

--- a/rapidpro_community_portal/static/css/main.css
+++ b/rapidpro_community_portal/static/css/main.css
@@ -208,7 +208,7 @@ ol{
   padding-bottom:10px;
   font-size:0.9em;
   line-height: 1.6em;
-  letter-spacing: 0.9px;
+  letter-spacing: 0.4px;
 }
 
 .rich-text img.left{ margin: 0 1em 0 0; }
